<resources>
    <string name="app_name">Revenue management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Managerment Revenue Expenditure</string>
    <string name="nav_header_subtitle">Nguyenvantoan.info@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hintTitle">Title</string>
    <string name="hintDescription">Descripton</string>
    <string name="hintMoney">Money</string>
    <string name="titleButtonChoose">Choose</string>
    <string name="time">Please choose day</string>
    <string name="titleAdvertisement">Advertisement</string>
    <string name="titlePurchase">Purchase</string>
    <string name="titleOutfit">Outfit</string>
    <string name="titleSalary">Salary</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_revinue">Revinue</string>
    <string name="menu_about">About</string>
    <string name="menu_statistical">Statistical</string>
    <string name="menu_exit">Exit</string>
    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">App Revenue Expenditure managerment</string>
</resources>
