<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"/>
    <RelativeLayout
        android:background="@drawable/background_setting"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="20dp"
            android:id="@+id/sw1"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:textColor="@color/textSetting"
                android:textStyle="bold"
                android:textSize="12pt"
                android:id="@+id/titlePurchese"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/titlePurchase"/>
            <Switch
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/isPurchese"/>
        </LinearLayout>
        <!--    -->
        <LinearLayout
            android:layout_margin="20dp"
            android:layout_below="@id/sw1"
            android:id="@+id/sw2"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:textColor="@color/textSetting"
                android:textStyle="bold"
                android:textSize="12pt"
                android:id="@+id/titleAd"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/titleAdvertisement"/>
            <Switch
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/isAd"/>
        </LinearLayout>
        <!--    -->
        <LinearLayout
            android:layout_margin="20dp"
            android:textColor="@color/textSetting"
            android:layout_below="@id/sw2"
            android:id="@+id/sw3"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:textColor="@color/textSetting"
                android:textStyle="bold"
                android:textSize="12pt"
                android:id="@+id/titleSalary"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/titleSalary"/>
            <Switch
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/isSalary"/>
        </LinearLayout>
        <!--    -->
        <LinearLayout
            android:layout_margin="20dp"
            android:layout_below="@id/sw3"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:textColor="@color/textSetting"
                android:textStyle="bold"
                android:textSize="12pt"
                android:id="@+id/titleOutfit"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:text="@string/titleOutfit"/>
            <Switch
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/isOutfit"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>