<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/logoExpenditure"
            android:src="@drawable/banner"
            android:scaleType="centerCrop"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mtitle"
            android:layout_below="@id/logoExpenditure"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_title_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
               android:layout_height="wrap_content"
                android:hint="@string/hintTitle"/>
            <Spinner
                android:tooltipText="Please choose category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerExpenture"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mdescription"
            android:layout_below="@id/mtitle"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_description_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintDescription"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mmoney"
            android:layout_below="@id/mdescription"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/icon_money_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintMoney"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:gravity="center"
            android:drawableStart="@drawable/ic_access_time_black_24dp"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:layout_below="@id/mmoney"
            android:text="Please choose date"
            android:layout_width="match_parent"
            android:id="@+id/mdate"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/mColor"
        android:layout_marginRight="5dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="right"
        android:background="@color/colorPrimary"
        android:layout_width="30dp"
        android:layout_height="30dp"/>
</FrameLayout>